# cqrs-rust-lib

./: .gitignore  .rustfmt.toml  AGENT_INSTRUCTIONS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  lefthook.yaml
.claude/skills/: cqrs-migrate-query.md  use-cqrs.md
.github/workflows/: ci.yml  publish.yml
docs/migration_guide/: domain_errors.md  rest_sql_pivot.md  split_aggregate.md  wasm_compat.md
example/: Cargo.toml
example/bank/: Cargo.toml
example/bank/src/: api.rs  main.rs  query_builder_movement.rs
example/bank/src/account/: aggregate.rs  errors.rs  events.rs  mod.rs  query.rs
example/bank/src/account/views/: movement.rs
example/bank/tests/: integration_tests.rs
example/ludotheque/: Cargo.toml
example/ludotheque/src/: api.rs  lib.rs  main.rs  query_builder.rs
example/ludotheque/src/game/: aggregate.rs  commands.rs  errors.rs  events.rs  mod.rs  query.rs
example/ludotheque/tests/: integration_tests.rs
example/src/: api.rs  lib.rs  main.rs  query_builder_account.rs  query_builder_movement.rs
example/src/account/: aggregate.rs  amount.rs  commands.rs  events.rs  mod.rs
example/src/account/views/: movement.rs
example/tests/: integration_tests.rs
example/todolist/: Cargo.toml
example/todolist/src/: api.rs  lib.rs  main.rs  query_builder_todolist.rs
example/todolist/src/todolist/: aggregate.rs  commands.rs  errors.rs  events.rs  mod.rs  query.rs
example/todolist/tests/: integration_tests.rs
src/: aggregate.rs  context.rs  denormalizer.rs  engine.rs  errors.rs  event.rs  event_store.rs  lib.rs  snapshot.rs  testing.rs  wasm_compat.rs
src/dispatchers/: memory.rs  mod.rs  view_dispatcher.rs
src/es/: impl.rs  inmemory.rs  mod.rs  mongodb.rs  persist.rs  postgres.rs  storage.rs  surrealdb.rs
src/prelude/: inmemory.rs  mod.rs  mongodb.rs  postgres.rs  surrealdb.rs
src/read/: memory.rs  mod.rs  mongodb.rs  paged.rs  postgres.rs  query.rs  sorter.rs  storage.rs  surrealdb.rs
src/rest/: audit_log_router.rs  codex.rs  codex_router.rs  helpers.rs  mod.rs  read_router.rs  router.rs  write_router.rs
tests/: integration_tests.rs  models.rs
