[package]
name = "cqrs-rust-lib"
authors = ["Michael DOHR"]
edition = "2024"
license-file = "LICENSE"
version = "0.1.0"

[features]
all = ["utoipa", "mongodb"]
utoipa = []
mongodb = []

[dependencies]
async-trait = "^0.1.0"
chrono = { version = "^0.4.0", features = ["serde"] }
http = "^1.3.0"
mongodb = { version = "^3.2.0", features = ["rustls-tls"] }
serde = { version = "^1.0.0", features = ["serde_derive"] }
thiserror = "^2.0.0"
tokio = "^1.45.0"
utoipa = "^5.4.0"
utoipa-axum = "^0.2.0"
axum = "0.8.4"
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
rand = "0.9.1"
futures = "0.3.31"
