[package]
name = "cqrs-rust-lib"
authors = ["Michael DOHR"]
edition = "2024"
license = "MIT"
version = "0.4.0"
description = "An opinionated implementation of CQRS/Event Sourcing with pluggable storage backends (InMemory, PostgreSQL, MongoDB)"
repository = "https://github.com/dohrm/cqrs-rust-lib"
keywords = ["cqrs", "event-sourcing", "aggregate", "ddd"]
categories = ["database"]

[features]
all = ["utoipa", "mongodb", "postgres"]
utoipa = ["dep:axum", "dep:utoipa", "dep:utoipa-axum"]
mongodb = ["dep:mongodb", "dep:bson"]
postgres = ["dep:tokio-postgres"]
mcp = ["dep:rmcp", "dep:schemars"]

[dependencies]
async-trait = "^0.1"
chrono = { version = "^0.4", features = ["serde"] }
http = "^1.3"
serde = { version = "^1", features = ["serde_derive"] }
tracing = { version = "0.1" }
thiserror = "^2.0"
tokio = { version = "^1", features = ["rt-multi-thread", "macros"] }
serde_json = "^1"
uuid = { version = "^1", features = ["v4"] }
rand = "^0.9"
futures = "^0.3"
# Http for utoipa feature
axum = { version = "^0.8", optional = true }
utoipa = { version = "^5.4", optional = true }
utoipa-axum = { version = "^0.2", optional = true }
# MongoDB for mongodb feature
bson = { version = "^2.15", features = ["chrono"], optional = true }
mongodb = { version = "^3.2", features = ["rustls-tls"], optional = true }
# Postgres client for postgres feature
tokio-postgres = { version = "^0.7", optional = true, features = ["with-serde_json-1", "with-chrono-0_4"] }
# MCP Server
rmcp = { version = "^0.6", optional = true, features = ["server"] }
schemars = { version = "^1", optional = true, features = ["derive"] }

[workspace]
members = ["example/bank", "example/todolist"]
resolver = "3"