[package]
name = "cqrs-rust-lib"
authors = ["Michael DOHR"]
edition = "2024"
license = "MIT"
version = "0.7.0"
description = "An opinionated implementation of CQRS/Event Sourcing with pluggable storage backends (InMemory, PostgreSQL, MongoDB, SurrealDB)"
repository = "https://github.com/dohrm/cqrs-rust-lib"
keywords = ["cqrs", "event-sourcing", "aggregate", "ddd"]
categories = ["database"]

[features]
all = ["rest", "mongodb", "postgres", "surrealdb"]
surrealdb = ["dep:surrealdb", "dep:surrealdb-types", "dep:rest-sql-drivers", "rest-sql-drivers/surrealdb"]
utoipa = ["dep:utoipa"]
rest = ["utoipa", "dep:axum", "dep:utoipa-axum", "dep:serde_urlencoded", "dep:percent-encoding"]
mongodb = ["dep:mongodb", "dep:bson", "dep:rest-sql-drivers", "rest-sql-drivers/mongodb"]
postgres = ["dep:tokio-postgres", "dep:rest-sql-drivers", "rest-sql-drivers/tokio-postgres"]
mcp = ["dep:rmcp", "dep:schemars"]
wasm = ["dep:getrandom", "getrandom/wasm_js", "uuid/js", "chrono/wasmbind"]

[dependencies]
async-trait = "^0.1"
chrono = { version = "^0.4", features = ["serde"] }
http = "^1.3"
serde = { version = "^1", features = ["serde_derive"] }
tracing = { version = "0.1" }
thiserror = "^2.0"
serde_json = "^1"
uuid = { version = "^1", features = ["v4"] }
rand = "^0.9"
getrandom = { version = "^0.3", optional = true }
futures = "^0.3"
# Http for utoipa feature
axum = { version = "^0.8", optional = true }
utoipa = { version = "^5.4", optional = true }
utoipa-axum = { version = "^0.2", optional = true }
# MongoDB for mongodb feature
bson = { version = "3", optional = true }
mongodb = { version = "^3.6", default-features = false, features = ["rustls-tls", "bson-3", "dns-resolver", "compat-3-3-0"], optional = true }
# Postgres client for postgres feature
tokio-postgres = { version = "^0.7", optional = true, features = ["with-serde_json-1", "with-chrono-0_4"] }
# SurrealDB for surrealdb feature
surrealdb = { version = "^3", optional = true }
surrealdb-types = { version = "^3", optional = true }
# rest-sql: always present (WASM-compatible, lightweight RSQL parser)
rest-sql = { version = "0.2" }
rest-sql-drivers = { version = "0.2", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
percent-encoding = { version = "2", optional = true }
# MCP Server
rmcp = { version = "^0.6", optional = true, features = ["server"] }
schemars = { version = "^1", optional = true, features = ["derive"] }

[dev-dependencies]
tokio = { version = "^1", features = ["rt-multi-thread", "macros"] }
# Enable in-memory engine for SurrealDB tests
surrealdb = { version = "^3", features = ["kv-mem"] }

[package.metadata.cargo-machete]
ignored = ["getrandom", "rmcp", "schemars"]

[workspace]
members = ["example/bank", "example/todolist", "example/ludotheque"]
resolver = "3"