[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "^0.1.0"
clap = { version = "4.5.37", features = ["derive", "env"] }
chrono = { version = "^0.4.0", features = ["serde"] }
http = "^1.3.0"
mongodb = { version = "^3.2.0", features = ["rustls-tls"] }
serde = { version = "^1.0.0", features = ["serde_derive"] }
tokio = "^1.45.0"
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-axum = "^0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tower-http = { version = "0.6.6", features = ["add-extension", "trace", "cors", "request-id"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
axum = "0.8.4"
# project
cqrs-rust-lib = { path = "..", features = ["utoipa", "mongodb"] }
