[package]
name = "todolist"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "^0.1.0"
serde = { version = "^1.0.0", features = ["serde_derive"] }
http = "^1.3.0"
axum = "0.8.4"
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-axum = "^0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tower-http = { version = "0.6.6", features = ["add-extension", "trace", "cors", "request-id"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
clap = { version = "4.5.37", features = ["derive", "env"] }
# runtime
tokio = { version = "^1.45.0", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1", "with-chrono-0_4"] }
serde_json = "1.0"

thiserror = "2"
# project
cqrs-rust-lib = { path = "../..", features = ["utoipa", "postgres"] }
